[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/cpu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Kenney Thick.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/ScissorsCard.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/RockCard.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/PaperCard.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Battle.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/WinScreen.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Game_CPU" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDown" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -32.0
margin_right = 64.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "15"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -40.0
margin_right = 80.0
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "Scissors"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RockCard" parent="." instance=ExtResource( 4 )]
position = Vector2( 336, 368 )

[node name="PaperCard" parent="." instance=ExtResource( 5 )]
position = Vector2( 512, 368 )

[node name="ScissorsCard" parent="." instance=ExtResource( 3 )]
position = Vector2( 688, 368 )

[node name="Battle" parent="." instance=ExtResource( 6 )]
visible = false

[node name="WinScreen" parent="." instance=ExtResource( 7 )]
[connection signal="begin_battle" from="." to="Battle" method="_on_Game_CPU_begin_battle"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="RockCard" to="." method="_on_RockCard_mouse_entered"]
[connection signal="mouse_entered" from="PaperCard" to="." method="_on_PaperCard_mouse_entered"]
[connection signal="mouse_entered" from="ScissorsCard" to="." method="_on_ScissorsCard_mouse_entered"]
[connection signal="show_battle" from="Battle" to="." method="_on_Battle_show_battle"]
[connection signal="show_winner" from="Battle" to="WinScreen" method="_on_Battle_show_winner"]
